Bug 97934 - [HSW IVB] gem_userptr_blits minor are failing
Summary: [HSW IVB] gem_userptr_blits minor are failing
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-26 15:24 UTC by cprigent
Modified: 2016-10-03 06:12 UTC (History)
1 user (show)

See Also:
i915 platform: HSW, IVB
i915 features: GEM/Other


Attachments
HSW__gem_userptr_blits__minor-__output (158.24 KB, text/plain)
2016-09-26 15:24 UTC, cprigent
no flags Details
HSW__gem_userptr_blits__minor-__kern.log (249.83 KB, text/plain)
2016-09-26 15:24 UTC, cprigent
no flags Details

Description cprigent 2016-09-26 15:24:17 UTC
Created attachment 126790 [details]
HSW__gem_userptr_blits__minor-__output

Platform: Dell Inc. OptiPlex 9020
CPU: Intel(R) Core(TM) i7-4770 CPU @ 3.40GHz (Family 6, Model 60, Stepping 3)
Motherboard: 0DNKMN
GPU: Intel® HD Graphics 4600 / Xeon E3-1200 v3/4th Gen Core Processor Integrated Graphics Controller

Software
Bios: A07
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.8.0-rc7 0e34cb5 from http://cgit.freedesktop.org/drm-intel/
commit 0e34cb5b35f0f837219495c402073141481b1b90
  Author: Jani Nikula <jani.nikula@intel.com>
  Date:   Mon Sep 19 18:39:27 2016 +0300
  drm-intel-nightly: 2016y-09m-19d-15h-38m-53s UTC integration manifest
libdrm-2.4.70-14 0659558 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-12.0.0 8b06176 from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.99-2 3ef51c5 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-703 15c5ff1 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.0-50 7aa2dd9 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.0-136 36fbd81 from git://git.freedesktop.org/git/vaapi/intel-driver
IGT: intel-gpu-tools-1.16-22 200237a from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
External screen: DELL E1912Hf

Steps
------
1. Execute IGT tests:
igt@gem_userptr_blits@minor-normal-sync
igt@gem_userptr_blits@minor-sync-interruptible
igt@gem_userptr_blits@minor-unsync-interruptible
igt@gem_userptr_blits@minor-unsync-normal

Actual result
-------------
1. Tests are fail

Expected result
----------------
1. Tests are Pass
Comment 1 cprigent 2016-09-26 15:24:38 UTC
Created attachment 126791 [details]
HSW__gem_userptr_blits__minor-__kern.log
Comment 2 Chris Wilson 2016-09-30 17:27:03 UTC
commit 91d3780aa5a3a2fc742d9f1f6d429e90012b5c4f
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Sep 30 17:41:01 2016 +0100

    igt/gem_userptr_blits: Tidy up the debug spam
    
    igt_subtest_group { /* to the request */ }
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97934


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.