igt/gem_userptr_blits: Tidy up the debug spam

igt_subtest_group { /* to the request */ }

Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97934